--- a/src/components/SignUp/signup.css
+++ b/src/components/SignUp/signup.css
@@ -6,11 +6,14 @@
   min-height: 100vh;
   font-family: "Jost", sans-serif;
   background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+  padding-top: 80px;
+  padding-left: 30%;
+  padding-right: 30%;
 }
 
 .main {
-  width: 100vh;
-  height: 100vh;
+  width: 50%;
+ 
   background: red;
   overflow: hidden;
   background: url("/public/signup.jpeg") no-repeat center/cover;
@@ -32,11 +35,11 @@
 }
 
 .label {
-  color: #fff;
+  color: black;
   font-size: 2.3rem;
   justify-content: center;
   display: flex;
-  margin: 60px;
+ 
   font-weight: bold;
   cursor: pointer;
   transition: 0.5s ease-in-out;
@@ -56,8 +59,8 @@
 }
 
 .button {
-  width: 20%;
-  height: 40%;
+  width: 50%;
+  
   margin: 10px auto;
   justify-content: center;
   display: block;
