--- a/src/components/ContactUs/contactus.css
+++ b/src/components/ContactUs/contactus.css
@@ -1,4 +1,4 @@
-.login-container {
+.contactus-container {
     background-color: blue;
     margin: 0;
     justify-content: center;
@@ -13,30 +13,26 @@
 
   h1 {
     text-align: center;
+    color: white;
+    font-size: 1.3rem;
+    padding: 30px;
   }
   
   .main {
     width: 50%;
    
-    background: red;
+    background: lightsteelblue;
     overflow: hidden;
-    background: url("/public/signup.jpeg") no-repeat center/cover;
+    
     border-radius: 10px;
     box-shadow: 5px 20px 50px #000;
     margin-left: auto;
     margin-right: auto;
     padding: 100px;
+    
   }
   
-  .signup {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
-    text-align: center;
-  }
+  
   
   .label {
     color: black;
@@ -52,7 +48,7 @@
   .input {
     width: 60%;
     height: 20px;
-    background: #e0dede;
+    background: #e0dedec9;
     justify-content: center;
     display: flex;
     margin: 20px auto;
@@ -69,7 +65,7 @@
     justify-content: center;
     display: block;
     color: #fff;
-    background: #573b8a;
+    background: rgb(138, 37, 141);
     font-size: 1em;
     font-weight: bold;
     margin-top: 20px;
@@ -81,17 +77,6 @@
   }
   
   .button:hover {
-    background: #6d44b8;
+    background: #8363be;
   }
 
-  .link {
-margin-left: 20%;
-text-decoration: none;
-color: rgb(52,152,219);
-font-size: 2rem;
-  }
-
-  link:hover {
-    background: rgb(52,152,219);
-  }
-  
