--- a/src/components/User/loginpage.css
+++ b/src/components/User/loginpage.css
@@ -88,8 +88,12 @@
 margin-left: 20%;
 text-decoration: none;
 color: rgb(52,152,219);
-font-size: 2rem;
+font-size: 1.3rem;
+position: absolute;
+bottom: 450px;
+right: 480px;
   }
+
 
   link:hover {
     background: rgb(52,152,219);
