--- a/src/components/User/loginpage.css
+++ b/src/components/User/loginpage.css
@@ -90,8 +90,11 @@ text-decoration: none;
 color: rgb(52,152,219);
 font-size: 1.3rem;
 position: absolute;
-bottom: 450px;
+bottom: 420px;
 right: 680px;
+background-color: #f2f2f2; 
+border: 2px solid #ccc; 
+box-shadow: 0px 0px 5px 0px rgba(0,0,0,0.75); 
   }
 
 
