--- a/src/components/ContactUs/contactus.css
+++ b/src/components/ContactUs/contactus.css
@@ -1,83 +1,86 @@
-.contactus-container {
-    background-color: blue;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Jost", sans-serif;
-    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
-    padding-top: 80px;
-    padding-left: 30%;
-    padding-right: 30%;
-  }
+.form {
+  border: 1px solid black;
+  border-radius: 1rem;
+  max-width: 50%;
+  max-width: 560px;
+  margin: 5% auto;
+  height: fit-content;
+  min-width: 30%;
+  background-color: white;
+  padding: 2rem;
+  border-radius: 10px;
+  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+}
 
-  h1 {
-    text-align: center;
-    color: white;
-    font-size: 1.3rem;
-    padding: 30px;
-    display: inline-block;
-  }
-  
-  .main {
-    width: 50%;
-   
-    background: lightsteelblue;
-    overflow: hidden;
-    
-    border-radius: 10px;
-    box-shadow: 5px 20px 50px #000;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 100px;
-    
-  }
-  
-  
-  
-  .label {
-    color: black;
-    font-size: 2.3rem;
-    justify-content: center;
-    display: flex;
-   
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.5s ease-in-out;
-  }
-  
-  .input {
-    width: 60%;
-    height: 20px;
-    background: #e0dedec9;
-    justify-content: center;
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-  }
-  
-  .button {
-    width: 50%;
-    
-    margin: 10px auto;
-    justify-content: center;
-    display: block;
-    color: #fff;
-    background: rgb(138, 37, 141);
-    font-size: 1em;
-    font-weight: bold;
-    margin-top: 20px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    transition: 0.2s ease-in;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background: #8363be;
-  }
+.headerContainer {
+  background: url("/public/mountain-view.jpg") no-repeat center/cover;
+  height: 30vh;
+  width: 100%;
+}
+
+.contact-container {
+  text-align: center;
+  height: 99vh;
+}
+
+.contact-header-name {
+  color: #d85c27;
+}
+
+.title {
+  text-align: center;
+  text-transform: uppercase;
+  letter-spacing: 3px;
+  font-size: 2.5rem;
+  padding: 5%;
+  margin: 0 auto;
+  color: white;
+}
+
+.titleParagraph {
+  color: beige;
+}
+
+.form-group {
+  display: flex;
+  flex-direction: column;
+  width: 100%;
+  margin-bottom: 2rem;
+}
+
+label {
+  font-size: 1.2rem;
+  margin-bottom: 0.5rem;
+}
+
+input[type="text"],
+input[type="email"],
+textarea {
+  padding: 0.5rem;
+  margin-bottom: 1rem;
+  border: none;
+  border-bottom: 2px solid #ccc;
+  font-size: 1.2rem;
+}
+
+input[type="submit"] {
+  background-color: #d85c27;
+  color: white;
+  padding: 0.5rem 1rem;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  font-size: 1.2rem;
+  transition: all 0.3s ease-in-out;
+}
+
+.submit-btn:hover {
+  background-color: #14365d;
+  transform: translateY(-1px);
+  box-shadow: 0 4px 4px black;
+}
+
+.contactBody {
+  background: linear-gradient(to top, #0f0c29, #302b63, #24243e)
+}
 
