--- a/src/components/User/loginpage.css
+++ b/src/components/User/loginpage.css
@@ -1,101 +1,100 @@
 .login-container {
-    background-color: blue;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    min-height: 100vh;
-    font-family: "Jost", sans-serif;
-    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
-    padding-top: 80px;
-    padding-left: 30%;
-    padding-right: 30%;
-  }
+  background-color: blue;
+  margin: 0;
+  justify-content: center;
+  align-items: center;
+  min-height: 95vh;
+  font-family: "Jost", sans-serif;
+  background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
+  padding-top: 80px;
+  padding-left: 30%;
+  padding-right: 30%;
+}
 
-  h1 {
-    text-align: center;
-  }
-  
-  .main {
-    width: 50%;
-   
-    background: red;
-    overflow: hidden;
-    background: url("/public/signup.jpeg") no-repeat center/cover;
-    border-radius: 10px;
-    box-shadow: 5px 20px 50px #000;
-    margin-left: auto;
-    margin-right: auto;
-    padding: 100px;
-  }
-  
-  .signup {
-    position: relative;
-    width: 100%;
-    height: 100%;
-    margin-left: auto;
-    margin-right: auto;
-    color: white;
-    text-align: center;
-  }
-  
-  .label {
-    color: black;
-    font-size: 2.3rem;
-    justify-content: center;
-    display: flex;
-   
-    font-weight: bold;
-    cursor: pointer;
-    transition: 0.5s ease-in-out;
-  }
-  
-  .input {
-    width: 60%;
-    height: 20px;
-    background: #e0dede;
-    justify-content: center;
-    display: flex;
-    margin: 20px auto;
-    padding: 10px;
-    border: none;
-    outline: none;
-    border-radius: 5px;
-  }
-  
-  .button {
-    width: 50%;
-    
-    margin: 10px auto;
-    justify-content: center;
-    display: block;
-    color: #fff;
-    background: #573b8a;
-    font-size: 1em;
-    font-weight: bold;
-    margin-top: 20px;
-    outline: none;
-    border: none;
-    border-radius: 5px;
-    transition: 0.2s ease-in;
-    cursor: pointer;
-  }
-  
-  .button:hover {
-    background: #6d44b8;
-  }
+h1 {
+  text-align: center;
+}
 
-  .link {
-margin-left: 20%;
-text-decoration: none;
-color: rgb(52,152,219);
-font-size: 1.3rem;
-position: absolute;
-bottom: 450px;
-right: 680px;
-  }
+.main {
+  width: 50%;
+  background: red;
+  overflow: hidden;
+  background: url("/public/signup.jpeg") no-repeat center/cover;
+  border-radius: 10px;
+  box-shadow: 5px 20px 50px #000;
+  margin-left: auto;
+  margin-right: auto;
+  padding: 100px;
+}
+
+.signup {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  margin-left: auto;
+  margin-right: auto;
+  color: white;
+  text-align: center;
+}
+
+.label {
+  color: black;
+  font-size: 2.3rem;
+  justify-content: center;
+  display: flex;
+
+  font-weight: bold;
+  cursor: pointer;
+  transition: 0.5s ease-in-out;
+}
+
+.input {
+  max-width: 60%;
+  min-width: 100px;
+  height: 20px;
+  background: #e0dede;
+  justify-content: center;
+  display: flex;
+  margin: 20px auto;
+  padding: 10px;
+  border: none;
+  outline: none;
+  border-radius: 5px;
+}
+
+.button {
+  max-width: 35%;
+  min-width: 75px;
+  margin: 10px auto;
+  justify-content: center;
+  display: block;
+  color: #fff;
+  background: #573b8a;
+  font-size: 1em;
+  font-weight: bold;
+  margin-top: 20px;
+  outline: none;
+  border: none;
+  border-radius: 5px;
+  transition: 0.2s ease-in;
+  cursor: pointer;
+}
+
+.button:hover {
+  background: #6d44b8;
+}
+
+.link {
+  margin-left: 20%;
+  text-decoration: none;
+  color: rgb(52, 152, 219);
+  font-size: 1.3rem;
+  position: absolute;
+  top: 35%;
+  left: 40%;
+}
 
 
-  link:hover {
-    background: rgb(52,152,219);
-  }
-  
+link:hover {
+  background: rgb(52, 152, 219);
+}
