--- a/src/components/ContactUs/contactus.css
+++ b/src/components/ContactUs/contactus.css
@@ -16,6 +16,10 @@
   background: url("/public/mountain-view.jpg") no-repeat center/cover;
   height: 30vh;
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
 }
 
 .contact-container {
@@ -32,7 +36,7 @@
   text-transform: uppercase;
   letter-spacing: 3px;
   font-size: 2.5rem;
-  padding: 5%;
+  padding-top: 5%;
   margin: 0 auto;
   color: white;
 }
