--- a/src/components/ContactUs/contactus.css
+++ b/src/components/ContactUs/contactus.css
@@ -57,8 +57,8 @@ label {
   margin-bottom: 0.5rem;
 }
 
-input[type="text"],
-input[type="email"],
+.contactText,
+.contactEmail,
 textarea {
   padding: 0.5rem;
   margin-bottom: 1rem;
