--- a/src/components/AboutUs/aboutus.css
+++ b/src/components/AboutUs/aboutus.css
@@ -10,8 +10,34 @@
     padding-top: 80px;
     padding-left: 30%;
     padding-right: 30%;
+    
   }
 
   .aboutus {
-    background: url("/public/wallpaperflare.com_wallpaper.jpg") no-repeat center/cover
+    background: url("/public/use.webp") no-repeat center/cover;
+    font: -webkit-control;
+  }
+
+  .text {
+    font-size: 18px;
+    color: black;
+    text-align: -webkit-center;
+    background-color: #f2f2f2;
+    
+    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75)
+  }
+
+  .test::after {
+    content: '';
+    position: absolute;
+    top: 0; 
+    left: 0; 
+    width: 100%; 
+    height: 100%; 
+    background-color: rgba(0,0,0,0.5);
+  }
+
+  .titleaboutus {
+    color: white;
+    font-size: large;
   }
