--- a/src/components/Profile/profilepage.css
+++ b/src/components/Profile/profilepage.css
@@ -3,7 +3,7 @@
     margin: 0;
     padding-top: 5%;
     font-family: sans-serif;
-    background-color: #6B48FF;
+    background: linear-gradient(to top, #0f0c29, #302b63, #24243e);
     display: flex;
     align-items: center;
     justify-content: space-around;
