--- a/src/components/AboutUs/aboutus.css
+++ b/src/components/AboutUs/aboutus.css
@@ -23,7 +23,7 @@
     color: black;
     text-align: -webkit-center;
     background-color: #f2f2f2;
-    
+    text-shadow: 2px 4px 4px rgba(46,91,173,0.6);
     box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75)
   }
 
