--- a/src/components/Home/WelcomePage.css
+++ b/src/components/Home/WelcomePage.css
@@ -1,8 +1,20 @@
-.welcomePage {
-    background-color: rgb(15, 135, 119);
-    Margin: 0;
+.welcome {
+    background: url("/public/livewires-logo.png") no-repeat center/cover;
+ height: 100vh;
+ width: 100vh;
+ justify-content: center;
+ text-align: center;
+ margin: auto;
+
 }
 
-.workButton {
-    background-color: aqua;
+.h1welcome {
+    text-shadow: 2px 4px 4px rgba(46,91,173,0.6);
+    text-align: center;
 }
+
+.h2welcome {
+    text-align: center;
+    text-shadow: 2px 4px 4px rgba(46,91,173,0.6);
+}
+
