--- a/src/components/User/loginpage.css
+++ b/src/components/User/loginpage.css
@@ -27,30 +27,6 @@ h1 {
   padding: 100px;
 }
 
-.loginForm {
-  margin-bottom: 0;
-}
-
-.forgotPassword {
-  margin-top: 500px;
-}
-
-.links {
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 90%;
-}
-.passwordForm {
-  height: 20px;
-  margin: 0;
-}
-
-.forgotPwd {
-  margin: 0;
-  cursor: pointer;
-}
-
 .signup {
   position: relative;
   width: 100%;
@@ -109,12 +85,15 @@ h1 {
 }
 
 .link {
+  margin-left: 20%;
   text-decoration: none;
-  color: black;
-}
-
-.register {
-  margin-top: 10%;
+  color: rgb(52, 152, 219);
+  font-size: 1.3rem;
+  position: absolute;
+  top: 480px;
+  background-color: #f2f2f2;
+  border: 2px solid #ccc;
+  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 
