--- a/client/src/components/User/loginpage.css
+++ b/client/src/components/User/loginpage.css
@@ -85,15 +85,14 @@ h1 {
 }
 
 .link {
-  margin-left: 20%;
-  text-decoration: none;
+  margin-left: 0;
+  margin-bottom: 0;
+
   color: rgb(52, 152, 219);
   font-size: 1.3rem;
-  position: absolute;
-  top: 480px;
-  background-color: #f2f2f2;
-  border: 2px solid #ccc;
-  box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75);
+  text-shadow: 0 0 10px;
+  
+ 
 }
 
 
