--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -3,11 +3,12 @@
     padding: 10px;
     margin: 0 auto;
     text-align: center;
+    font-family: Brush Script MT, cursive;
+    font-size: large;
 }
 .navbar a {
     color: white;
-    font-size: 16px;
-    font-weight: bold;
+    font-size: 20px;
     text-decoration: none; 
     padding: 10px 20px; 
     transition: all 0.35 ease;
