--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -1,10 +1,11 @@
 .navbar {
-    background-color: #f2f2f2;
-    padding: 10px;
+    background-color: black;
     margin: 0 auto;
     text-align: center;
     font-family: Brush Script MT, cursive;
     font-size: large;
+    padding: 20px;
+    text-decoration: none;
 }
 .navbar a {
     color: white;
