--- a/client/src/components/Profile/profilepage.css
+++ b/client/src/components/Profile/profilepage.css
@@ -55,8 +55,8 @@ label {
     width: 95%;
     border: none;
     border-radius: 5px;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #dff0fd;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
+    background-color: transparent;
     color: #333333;
 }
 
@@ -105,8 +105,7 @@ input:focus {
     padding: 15px;
     width: 95%;
     border: none;
-    box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1);
-    background-color: #dff0fd;
+    box-shadow: 5px 5px 5px rgba(0, 0, 0, 0.1);
     color: #333333;
     display: flex;
     align-items: center;
