Home page and about us page changes

--- a/client/src/components/Profile/profilepage.css
+++ b/client/src/components/Profile/profilepage.css
@@ -110,6 +110,7 @@ input:focus {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    cursor: pointer;
 }
 
 .pTasks {
