--- a/client/src/components/AboutUs/aboutus.css
+++ b/client/src/components/AboutUs/aboutus.css
@@ -1,43 +1,62 @@
-.aboutus {
-  background-image: url("/public/signup.jpeg") no-repeat center/cover;
-    background-color: blue;
-    margin: 0;
-    justify-content: center;
-    align-items: center;
-    min-height: 95vh;
-    font-family: "Jost", sans-serif;
-    background: linear-gradient(to bottom, #0f0c29, #302b63, #24243e);
-    padding-top: 80px;
-    padding-left: 30%;
-    padding-right: 30%;
-    
-  }
+.about-us-container {
+  max-width: 800px;
+  margin: 0 auto;
+  padding: 50px;
+  background-color: #fff;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+}
 
-  .aboutus {
-    background: url("/public/use.webp") no-repeat center/cover;
-    font: -webkit-control;
-  }
+h1 {
+  font-size: 3rem;
+  color: #e74c3c;
+  text-align: center;
+}
 
-  .text {
-    font-size: 18px;
-    color: black;
-    text-align: -webkit-center;
-    background-color: #f2f2f2;
-    text-shadow: 2px 4px 4px rgba(46,91,173,0.6);
-    box-shadow: 0px 0px 5px 0px rgba(0, 0, 0, 0.75)
-  }
+p {
+  font-size: 1.2rem;
+  line-height: 1.5;
+  color: #444;
+}
 
-  .test::after {
-    content: '';
-    position: absolute;
-    top: 0; 
-    left: 0; 
-    width: 100%; 
-    height: 100%; 
-    background-color: rgba(0,0,0,0.5);
-  }
+.team-section {
+  display: flex;
+  justify-content: space-around;
+  flex-wrap: wrap;
+  margin-top: 50px;
+}
 
-  .titleaboutus {
-    color: white;
-    font-size: large;
+.person {
+  width: 350px;
+  margin-bottom: 50px;
+  text-align: center;
+  background-color: #f1f1f1;
+  box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.person img {
+  width: 100%;
+  height: 200px;
+  object-fit: cover;
+  object-position: center;
+}
+
+.person h3 {
+  font-size: 2rem;
+  color: #3498db;
+  margin: 20px 0;
+}
+
+.person p {
+  font-size: 1.2rem;
+  color: #555;
+  line-height: 1.5;
+  padding: 0 20px;
+}
+
+@media (max-width: 600px) {
+  .person {
+    width: 100%;
   }
+}
