--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -1,12 +1,11 @@
 .home-page-container {
   width: 100%;
-  height: 100vh;
+  min-height: 100vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
   align-items: center;
   background: linear-gradient(to bottom right, #bdc3c7, #2c3e50);
-  overflow: hidden;
 }
 
 .hero-section {
@@ -16,7 +15,7 @@
   animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) forwards;
 }
 
-.title {
+.homeTitle {
   font-size: 5rem;
   color: #3498db !important;
   margin-bottom: 20px;
@@ -42,7 +41,14 @@
   box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.1);
   opacity: 0;
   animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 1.5s forwards;
+  transition: all 0.2s ease-in-out;
   cursor: pointer;
+}
+
+.get-started-button:hover {
+  background-color: #4CAF50;
+  transform: scale(1.1) !important;
+  box-shadow: 3px 3px 5px black;
 }
 
 .features-section {
@@ -51,9 +57,39 @@
   justify-content: space-around;
   align-items: center;
   width: 80%;
-  margin-top: 100px;
   opacity: 0;
   animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 2s forwards;
+}
+
+#myButton {
+  position: relative;
+  display: inline-block;
+  padding: 12px 30px;
+  border: none;
+  background-color: #3498db; 
+  color: #fff;
+  font-size: 16px;
+  font-weight: bold;
+  border-radius: 50px;
+  cursor: pointer;
+  transition: all 0.2s ease-in-out;
+}
+
+#myButton:hover {
+  background-color: #4CAF50;
+  transform: scale(1.1);
+  box-shadow: 3px 3px 5px black;
+}
+
+
+.login-form-container {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  width: 80%;
+  opacity: 0;
+  animation: fade-in 1s cubic-bezier(0.25, 0.46, 0.45, 0.94) 3s forwards;
 }
 
 .feature {
@@ -115,6 +151,7 @@
     opacity: 0;
     transform: translateY(50px);
   }
+
   to {
     opacity: 1;
     transform: translateY(0);
@@ -152,4 +189,13 @@
   .cta-button {
     font-size: 1.2rem;
   }
+}
+
+.forgotPwd {
+  cursor: pointer;
+}
+
+.forgotPwd:hover {
+  transform: scale(1.2);
+  color: rgb(252, 54, 54);
 }
