--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -7,14 +7,32 @@
     padding: 20px;
     text-decoration: none;
 }
+
 .navbar a {
     color: white;
     font-size: 20px;
-    text-decoration: none; 
-    padding: 10px 20px; 
+    text-decoration: none;
+    padding: 10px 20px;
     transition: all 0.35 ease;
-} 
-.navbar a:hover { 
-    background-color: #0099FF; 
-    
 }
+
+.navbar a:hover {
+    background-color: #0099FF;
+}
+
+.logout-button {
+    background-color: #FF5733; /* Unique color scheme */
+    border: none;
+    border-radius: 8px;
+    padding: 6px;
+    color: #fff;
+    cursor: pointer;
+    transition: all 0.2s ease;
+  }
+  
+  /* Styling for the logout button when hovered over */
+  .logout-button:hover {
+    background-color: #FF8C65;
+    transform: translateY(-3px);
+    box-shadow: 0px 2px 5px white;
+  }
