--- a/client/src/components/AboutUs/aboutus.css
+++ b/client/src/components/AboutUs/aboutus.css
@@ -1,8 +1,11 @@
 .about-us-container {
-  max-width: 800px;
+  width: 80%;
+  max-width: 1000px;
   margin: 0 auto;
   padding: 50px;
-  background-color: #fff;
+  margin-top: 5%;
+  margin-bottom: 5%;
+  background: linear-gradient(to bottom right, #bdc3c7, #2c3e50);
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
 }
 
@@ -26,20 +29,23 @@ p {
 }
 
 .person {
-  width: 350px;
+  height: 50%;
+  width: 45%;
   margin-bottom: 50px;
   text-align: center;
   background-color: #f1f1f1;
   box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
   border-radius: 10px;
   overflow: hidden;
+  background-color: #1f2029;
 }
 
 .person img {
   width: 100%;
-  height: 200px;
+  height: 300px;
   object-fit: cover;
-  object-position: center;
+  object-position: top;
+  
 }
 
 .person h3 {
@@ -50,7 +56,7 @@ p {
 
 .person p {
   font-size: 1.2rem;
-  color: #555;
+  color: white;
   line-height: 1.5;
   padding: 0 20px;
 }
