--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -1,4 +1,4 @@
-.navbar {
+.navbar1 {
     background-color: black;
     margin: 0 auto;
     text-align: center;
@@ -8,7 +8,12 @@
     text-decoration: none;
 }
 
-.navbar a {
+.navbar2 {
+    display: flex !important;
+    justify-content: space-between !important;
+}
+
+.navbar1 a {
     color: white;
     font-size: 20px;
     text-decoration: none;
@@ -16,7 +21,7 @@
     transition: all 0.35 ease;
 }
 
-.navbar a:hover {
+.navbar1 a:hover {
     background-color: #0099FF;
 }
 
@@ -28,6 +33,8 @@
     color: #fff;
     cursor: pointer;
     transition: all 0.2s ease;
+    font-family: 'Times New Roman';
+    font-size: small;
   }
   
   /* Styling for the logout button when hovered over */
