--- a/client/src/components/Task/task.css
+++ b/client/src/components/Task/task.css
@@ -6,9 +6,11 @@
 }
 
 .calendar {
-    min-width: 80%;
-    max-width: 90%;
+    width: 100%;
     margin: 0 auto;
+    background-color: white;
+    color: black;
+    height: 95vh;
 }
 
 .rbc-month-view {
