--- a/client/src/components/ContactUs/contactus.css
+++ b/client/src/components/ContactUs/contactus.css
@@ -6,7 +6,7 @@
   margin: 5% auto;
   height: fit-content;
   min-width: 30%;
-  background-color: white;
+  background-color: #2b2e38;
   padding: 2rem;
   border-radius: 10px;
   box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
@@ -28,7 +28,7 @@
 }
 
 .contact-header-name {
-  color: #d85c27;
+  color: #ffeba7;
 }
 
 .title {
@@ -68,8 +68,7 @@ textarea {
 }
 
 input[type="submit"] {
-  background-color: #d85c27;
-  color: white;
+  background-color: #ffeba7;
   padding: 0.5rem 1rem;
   border: none;
   border-radius: 5px;
@@ -79,12 +78,40 @@ input[type="submit"] {
 }
 
 .submit-btn:hover {
-  background-color: #14365d;
+  background-color: #000000;
+  color: #ffeba7;
   transform: translateY(-1px);
   box-shadow: 0 4px 4px black;
 }
 
 .contactBody {
-  background: linear-gradient(to top, #0f0c29, #302b63, #24243e)
+  background: linear-gradient(to bottom right, #bdc3c7, #2c3e50);
+}
+
+.contact-input {
+  position: relative;
+  display: block;
+  margin: 0;
+  padding: 0;
+  padding: 13px 20px;
+  padding-left: 55px;
+  height: 48px;
+  width: 100%;
+  font-weight: 500;
+  border-radius: 4px;
+  font-size: 14px;
+  line-height: 22px;
+  letter-spacing: 0.5px;
+  outline: none;
+  color: #c4c3ca;
+  background-color: #1f2029;
+  border: none;
+  -webkit-transition: all 200ms linear;
+  transition: all 200ms linear;
+  box-shadow: 0 4px 8px 0 rgba(21, 21, 21, .2);
+}
+
+.contact-message {
+  height: 7rem;
 }
 
