--- a/client/src/components/Home/home.css
+++ b/client/src/components/Home/home.css
@@ -35,7 +35,7 @@
 .get-started-button {
   font-size: 1.5rem;
   background-color: #ffeba7;
-  color: black;
+  color: black !important;
   padding: 10px 20px;
   border: none;
   border-radius: 30px;
@@ -48,7 +48,7 @@
 
 .get-started-button:hover {
   background-color: #000000;
-  color: #ffeba7;
+  color: #ffeba7 !important;
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
 
