--- a/client/src/components/MusicPlayer/musicplayer.css
+++ b/client/src/components/MusicPlayer/musicplayer.css
@@ -1,7 +1,13 @@
+.music-player {
+    height: 30px !important;
+}
+
 .radio {
     max-width: 60em;
     width: 100%;
 }
+
+
 
 .filters {
     display: flex;
@@ -50,7 +56,7 @@
     text-align: center;
 }
 
-img {
+.song-img {
     display: block;
     width: 2.5em;
     height: 2.5em;
