--- a/client/src/components/User/loginpage.css
+++ b/client/src/components/User/loginpage.css
@@ -148,7 +148,7 @@ h6 span {
   position: relative;
   width: 500px;
   max-width: 100%;
-  height: 600px;
+  height: 650px;
   -webkit-transform-style: preserve-3d;
   transform-style: preserve-3d;
   perspective: 800px;
@@ -238,7 +238,7 @@ h6 span {
   transition: all 200ms linear;
 }
 
-.btn {
+.log-in-page-button {
   border-radius: 4px;
   height: 44px;
   font-size: 13px;
@@ -253,11 +253,11 @@ h6 span {
   display: inline-flex;
   align-items: center;
   background-color: #ffeba7;
-  color: #000000;
+  color: #000000 !important;
 }
 
-.btn:hover {
+.log-in-page-button:hover {
   background-color: #000000;
-  color: #ffeba7;
+  color: #ffeba7 !important;
   box-shadow: 0 8px 24px 0 rgba(16, 39, 112, .2);
 }
