--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -6,11 +6,14 @@
     font-size: large;
     padding: 20px;
     text-decoration: none;
+    height: 8vh;
+
 }
 
 .navbar2 {
     display: flex !important;
     justify-content: space-between !important;
+    height: 8vh;
 }
 
 .navbar1 a {
