--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -4,28 +4,56 @@
     text-align: center;
     font-family: Brush Script MT, cursive;
     font-size: large;
-    padding: 20px;
     text-decoration: none;
-    height: 8vh;
+    height: 10vh;
 
 }
 
 .navbar2 {
     display: flex !important;
-    justify-content: space-between !important;
-    height: 8vh;
+    justify-content: space-around !important;
+    align-items: center;
+    height: 100% !important;
+}
+
+.navbar3 {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    justify-content: space-between;
+    width: 100%;
+    height: 100%;
+    padding: 0 20px;
+}
+
+.navbar3 a {
+    display: flex;
 }
 
 .navbar1 a {
+    display: flex;
     color: white;
     font-size: 20px;
+    height: 100%;
     text-decoration: none;
-    padding: 10px 20px;
+    padding: 0 20px;
     transition: all 0.35 ease;
 }
 
+.links {
+    display: flex;
+    height: 100%;
+}
+
+.link {
+    align-items: center;
+    padding-top: 50vh;
+}
+
+
 .navbar1 a:hover {
-    background-color: #0099FF;
+    color: #ffeba7;
+    border-bottom: 2px solid #ffeba7;
 }
 
 .logout-button {
