Added test login and removed music player

--- a/client/src/components/NavBar/navbar.css
+++ b/client/src/components/NavBar/navbar.css
@@ -6,8 +6,12 @@
     font-family: Brush Script MT, cursive;
     font-size: large;
     text-decoration: none;
-    min-height: 10vh;
+    height: 7vh;
+}
 
+.hamburger-nav {
+    display: flex;
+    align-items: center;
 }
 
 .navbar2 {
@@ -46,6 +50,7 @@
     justify-content: space-around;
     flex-wrap: wrap;
     height: 100%;
+    width: 100%;
 }
 
 .link {
